[package]
name = "tinymd"
version = "0.1.0"
authors = ["Federico Vitale <fedevitale99@gmail.com>"]
edition = "2018"
description = "A dead simple markdown compiler written in Rust."
homepage = "https://github.com/rawnly/tinymd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
